# HeterogeneousPU

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bootstrap.sh  build.sh  main.cc  main.cpp
lib/inc/argument/: option.h  parser.h
lib/inc/compose/: NEON.h  OpenCL.h  OpenVINO.h  RKNN.h  classification_results.h  edgetpu.h  iengine.h  mali.h  manager.h  myriad.h  neon.h  rknn.h  structure.h
lib/inc/compose/extension/: ObjectDetection.h  armnn.h  edgetpu.h
lib/inc/mali/: mali.h
lib/inc/myriad/: myriad.h
lib/inc/neon/: neon.h
lib/inc/rknn/: rknn.h
lib/inc/scheduler/: affinity_scheduler.h  dfs_scheduler.h  efts.h  fcfs.h  first_come_first_served_scheduler.h  hrn.h  ischeduler.h  max_min_scheduler.h  min_assign_scheduler.h  priority_scheduler.h  pu_queue.h  random_sche.h  real_time_genetic_scheduler.h  round_robine.h  scheduler.h  short_job_first_scheduler.h  sjf.h  srtf.h
lib/src/: stb_image.cpp
lib/src/argument/: parser.cpp
lib/src/compose/: edgetpu.cpp  mali.cpp  manager.cpp  myriad.cpp  neon.cpp  rknn.cpp
lib/src/compose/extension/: ObjectDetection.cpp  ObjectDetection.h  armnn.h  edgetpu.cpp  edgetpu.h
lib/src/scheduler/: affinity_scheduler.cpp  dfs_scheduler.cpp  efts.cpp  fcfs.cpp  first_come_first_served_scheduler.cpp  hrn.cpp  ischeduler.cpp  max_min_scheduler.cpp  min_assign_scheduler.cpp  priority_scheduler.cpp  pu_queue.cpp  random_sche.cpp  real_time_genetic_scheduler.cpp  round_robine.cpp  scheduler.cpp  short_job_first_scheduler.cpp  sjf.cpp  srtf.cpp
link/: README.md
scripts/: Dockerfile_openvino  bootstrap-container.sh  build-container.sh  build_opencv.sh  build_openvino.sh  caffe2armcl.py  create_model.py  device.sh  install_open_vino.sh  keras2devce.sh  pb2devce.sh  requirements.txt  submodule_update.sh  test.py  tf23devce.sh  tf2armcl.py  tf2devce.sh  tf2tflite.py  tflite2rknn.py
scripts/convert/: create_model.py  keras2armcl.py  keras2coral.py  keras2pb.py  keras2tflite.py  onnx2keras.py  pb2keras.py  setup.sh  tflite2rknn.py
scripts/efnetv2b0/myriad/: saved_model.mapping  saved_model.xml
scripts/mobilenet/coral/: saved_model.tflite
